traces/bug_474.txt
examples++-load/gmsh.cpp:637: error: DEAD_STORE
  The value written to &indices (type int*) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:637:5: Write of unused value
635.   		  int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
636.   		  int partition = (numTags > 2) ? data[4 - numTags + 2] : 0;
637.   		  int *indices = &data[numTags + 1];
           ^
638.   		  
639.   		  if( type == 1 && i==0 ){
